@@ -19,7 +19,8 @@ Version 0.1.7 - ???
 - [new] Added a setTarget() method to WFSubmit so you can better control the method called when submitting a form.
 - [new] Add minified versions of core JS files and add GZIP encoding to httpd.conf template
 - [bugfix] Add support for setting any KVC property in fixtures. Previously only properties backed by the database would work.
-- [new] Add a global debug mode PHOCOA_DEBUG=1 in any $_REQUEST param.
+- [new] Add PHOCOA_DEBUG mode to turn on advanced debugging for javascript, etc. Just set PHOCOA_DEBUG=1 in your URL and that session will be in debug mode for the remainder of that session. PHOCOA_DEBUG turns on debug reporting and uses non-minified Javascript files.
+- [new] Refactor WFRPC to remove YUI dependency. Things are much faster now. Thanks @jwatts!
 - [new] Add a magic array operator @first to get the first value from an array.
 
 Version 0.1.6 - 8/7/2008
